--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,6 @@ jobs:
 # ---------------------------------------------------------------------------------------
 
     runs-on: ubuntu-latest
-    if: "! contains(github.event.head_commit.message, '[skip ci]')"
     steps:
 
       - uses: actions/checkout@v2 # https://github.com/actions/checkout
@@ -42,16 +41,18 @@ jobs:
         config:
           # https://github.com/actions/virtual-environments/blob/main/images/win/Windows2022-Readme.md
           - { OS: windows-2022 }
-          - { OS: ubuntu-latest  }
+          - { OS: ubuntu-22.04  }
 
     steps:
 
-      - uses: actions/checkout@v2 # https://github.com/actions/checkout
+      - name: 🤘 Checkout Code
+        uses: actions/checkout@v2 # https://github.com/actions/checkout
 
-      - uses: ./
+      - name: Use own action
+        uses: ./
         with:
           # Vulkan SDK version to download. Default: latest version.
-          version: 1.2.198.1
+          version: 1.3.216.0
           # test with intentionally wrong version
           # should say version not available
           # should print list of valid versions
