--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
           echo $PATH
           echo $VULKAN_VERSION
           echo $VULKAN_SDK
-          ls $VULKAN_SDK/x64
+          ls -ahR $VULKAN_SDK
 
       - name: Show Env Vars and SDK folder
         if: contains(matrix.config.OS, 'windows')
@@ -74,4 +74,4 @@ jobs:
           echo %PATH%
           echo %VULKAN_VERSION%
           echo %VULKAN_SDK%
-          dir %VULKAN_SDK%/x64
+          dir /s /b /o:gn %VULKAN_SDK%
