--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,7 @@ jobs:
           echo $PATH
           echo $VULKAN_VERSION
           echo $VULKAN_SDK
-          ls $VULKAN_SDK
+          du -hs $VULKAN_SDK
 
       - name: Show Env Vars and SDK folder
         if: contains(matrix.config.OS, 'windows')
@@ -73,3 +73,7 @@ jobs:
           echo %VULKAN_VERSION%
           echo %VULKAN_SDK%
           dir %VULKAN_SDK%
+
+      - name: Check Installation
+        shell: bash
+        run: $VULKAN_SDK/bin/vulkaninfoSDK
