dump capabilities.device.properties.VkPhysicalDeviceProperties.deviceName via jq for both rasterizers, document swiftshader ICD registration

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -264,6 +264,7 @@ jobs:
           reg add "HKLM\SOFTWARE\Khronos\Vulkan\Drivers" /v "C:\lavapipe\share\vulkan\icd.d\lvp_icd.x86_64.json" /t REG_DWORD /d 0 /f
           vulkaninfoSDK.exe -j -o lavapipe_profile.json
           Get-Content -Raw lavapipe_profile.json
+          jq -r '.capabilities.device.properties.VkPhysicalDeviceProperties.deviceName' lavapipe_profile.json
           reg delete "HKLM\SOFTWARE\Khronos\Vulkan\Drivers" /v "C:\lavapipe\share\vulkan\icd.d\lvp_icd.x86_64.json" /f
 
       - name: Register SwiftShader Driver and run vulkaninfoSDK
@@ -273,6 +274,7 @@ jobs:
           reg add "HKLM\SOFTWARE\Khronos\Vulkan\Drivers" /v "C:\Swiftshader\vk_swiftshader_icd.json" /t REG_DWORD /d 0 /f
           vulkaninfoSDK.exe -j -o swiftshader_profile.json
           Get-Content -Raw swiftshader_profile.json
+          jq -r '.capabilities.device.properties.VkPhysicalDeviceProperties.deviceName' swiftshader_profile.json
           reg delete "HKLM\SOFTWARE\Khronos\Vulkan\Drivers" /v "C:\Swiftshader\vk_swiftshader_icd.json" /f
 
       #- name: Show Env Vars and SDK folder (Linux)
