added support for "install_runtime_only", added download verification for vulkan files, increased test coverage, bump to v1.2.8

--- a/action.yml
+++ b/action.yml
@@ -25,6 +25,9 @@ inputs:
   install_runtime:
     description: "Windows only. Installs the vulkan runtime (vulkan-1.dll). Default: false."
     required: false
+  install_runtime_only:
+    description: "Windows only. Disables the installation of the Vulkan SDK and installs only runtimes. Default: false."
+    required: false
   cache:
     description: "Cache the Vulkan installation folder. Default: false."
     required: false
