--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -401,12 +401,14 @@ jobs:
       # And of course the file is named vulkaninfoSDK.exe when from the SDK
       # and named vulkaninfo.exe when from the runtime only package.
       # I see we love consistency at LunarG... :)
+      #working-directory: ${{env.VULKAN_SDK}}\${{env.VULKAN_VERSION}}\runtime\x64
       - name: (Lavapipe) Run vulkaninfoSDK
         if: contains(matrix.config.OS, 'windows')
-        working-directory: ${{env.VULKAN_SDK}}\${{env.VULKAN_VERSION}}\runtime\x64
         shell: pwsh
         run: |
-          vulkaninfo.exe -j -o lavapipe_profile.json
+          $vulkanPath = Join-Path $env:VULKAN_SDK $env:VULKAN_VERSION
+          Set-Location "$vulkanPath\runtime\x64"
+          .\vulkaninfo.exe -j -o lavapipe_profile.json
           Get-Content -Raw lavapipe_profile.json
 
       - name: (Lavapipe) Output Device Name from Profile
