--- a/action.yml
+++ b/action.yml
@@ -46,6 +46,9 @@ inputs:
   lavapipe_destination:
     description: "The installation folder for Lavapipe. Default: see Readme."
     required: false
+  github_token:
+    description: "GitHub token for increasing API rate limits. Default: see Readme."
+    required: false
 
 outputs:
   VULKAN_VERSION:
