--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,10 @@ jobs:
         run: |
           npm install
 
+      - name: Run lint
+        run: |
+          npm run lint:check
+
       - name: Run all script steps
         run: |
           npm run all
@@ -260,8 +264,10 @@ jobs:
             dir /s C:\Lavapipe
           )
 
-      # Generate vulkaninfo profile the rasterizer
-      # Register both drivers via ICD (Installable Client Driver) files in the Windows Registry before running vulkaninfoSDK.exe.
+      # 1. Register driver(s) via ICD (Installable Client Driver) files in the
+      #    Windows Registry before running vulkaninfoSDK.exe.
+      # 2. Generate vulkaninfo profile for the rasterizer
+      # 3. Output Device Name from profile
       # The steps are splitted to easily access the "Output Device Name from Profile" in the CI logs.
 
       - name: Register Driver in Registry (using VK_DRIVER_FILES env var)
@@ -269,10 +275,6 @@ jobs:
         shell: pwsh
         run: |
           reg add "HKLM\SOFTWARE\Khronos\Vulkan\Drivers" /v "$env:VK_DRIVER_FILES" /t REG_DWORD /d 0 /f
-
-      # Generate vulkaninfo profiles for both rasterizers (profile.json).
-      # Register both drivers via ICD (Installable Client Driver) files in the Windows Registry before running vulkaninfoSDK.exe.
-      # The steps are splitted to easily access the "Output Device Name from Profile" in the CI logs.
 
       - name: Run vulkaninfoSDK
         if: contains(matrix.config.OS, 'windows')
